--- a/templates/index.html
+++ b/templates/index.html
@@ -179,6 +179,13 @@
                     <span id="value3">%{{ pos[5] }}</span>
                 </label>
             </div>
+            <div>
+                <label>
+                    <input class="form-check-input" type="checkbox" id="checkbox4" checked> Minimum pixel büyüklüğü    
+                    <input type="range" id="slider6" min="0" max="200" value="{{ pos[6] }}">
+                    <span id="value3"> {{ pos[6] }} pixel</span>
+                </label>
+            </div>
             <br><br>
                 
         </div>
